<resources>
    <string name="app_name">NewCrud</string>
    <string name="name">name</string>
    <string name="email">Email</string>
    <string name="designation">Designation</string>
    <string name="age">Age</string>
    <string name="address">address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dob" />
    <string name="salary" />
    <string name="save" />
    <string name="update" />
</resources>